# ragenix

./: .gitignore  Cargo.toml  LICENSE  build.rs  flake.nix  include.h  include.hpp  ragenix.cc  wrapper.h
.vim/: lspconfig.lua
nix/: Cargo.toml  build.rs
nix/src/: args.rs  context.rs  error.rs  lib.rs  log.rs  primop.rs  state.rs  value.rs
ragenix/: Cargo.toml
ragenix/src/: lib.rs
src/: context.rs  error.rs  lib.rs  log.rs  main.rs  nix.rs  nix_ffi.rs  primop.rs  string.rs
src/nix/: args.rs  array.rs  context.rs  context2.rs  error.rs  mod.rs  primop.rs  state.rs  value.rs
