[package]
name = "ragenix"
version = "0.1.1"
description = "A evaluation time decryptor plugin for Nix"
edition = "2021"
license = "MIT"
readme = "README.md"

[lib]
crate-type = [ "cdylib", "lib" ]

[profile.release]
codegen-units = 1
strip = true
lto = true

[build-dependencies]
cc = "1.2.10"
pkg-config = "0.3.31"

[dependencies]
age = { version = "0.11.1", features = ["armor", "cli-common", "plugin", "ssh"] }
