[package]
name = "ragenix"
version = "0.1.8"
description = "A evaluation time decryptor plugin for Nix"
edition = "2024"
license = "MIT"
readme = "README.md"

[lib]
crate-type = ["cdylib", "lib"]

[profile.release]
codegen-units = 1
strip = true
lto = true

[build-dependencies]
cc = "1.2.26"
pkg-config = "0.3.32"

[dependencies]
age = { version = "0.11.1", features = [
  "armor",
  "cli-common",
  "plugin",
  "ssh",
] }
cc = "1.2.26"
