[package]
name = "ragenix"
version = "0.3.0"
description = "A evaluation time decryptor plugin for Nix"
edition = "2024"
license = "MIT"
readme = "README.md"

[lib]
crate-type = ["cdylib", "lib"]

[profile.release]
codegen-units = 1
strip = true
lto = true

[build-dependencies]
bindgen = "0.72.1"
pkg-config = "0.3.32"

[dependencies]
age = { version = "0.11.2", features = [
  "armor",
  "cli-common",
  "plugin",
  "ssh",
] }
